# EIMTimeStretchers

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  settings.gradle
.github/workflows/: release.yml
common/: build.gradle
common/src/main/java/com/eimsound/dsp/timestretchers/: NativeLibrary.java  NativeResampler.java
gradle/wrapper/: gradle-wrapper.properties
lib/: library.cpp  sound_touch_time_stretcher.h
src/: library.cpp  rubberband_time_stretcher.h  sound_touch_time_stretcher.h  time_stretcher.cpp  time_stretcher.h
src/main/java/com/eimsound/dsp/timestretchers/: NativeFFT.java  NativeLibrary.java  NativeResampler.java  NativeTimeStretcher.java
stubs/system/: sysutils.h
